==> mbedmicro/DAPLink/source/hic_hal/cypress/psoc5lp/usbd_PSoC5LP.c <==
#include "RTL.h"
#include "usb_def.h"
#include "usb_msc.h"
#include "usbd_core.h"
#include "usbd_hw.h"
#include "usbd_msc.h"
#include "usbd_event.h"
#include "usbd_hid.h"
#include "USBFS_Dp.h"
#include "usbd_PSoC5LP.h"
#include "info.h"
#include "usbd_cdc_acm.h"
#include "UART_Bridge.h"
#include "Clock_UART.h"
#include "Pin_UART_Tx.h"
#include "rl_usb.h"
#include "vfs_manager.h"
#define EP_NOT_FOUND                (0xFFFFFFFFu)

void USBD_Handler(void)
{
    if (USBFS_BUS_RESET)
    {
        USBFS_BUS_RESET = __FALSE;
        for (uint8 epNumber = 0u; epNumber < USBFS_MAX_EP; epNumber++)
        {
            USBFS_EP_INT_Pending[epNumber] = 0;
        }
#ifdef DRAG_N_DROP_SUPPORT
        vfs_mngr_fs_remount();
#endif 
        USBD_Reset_Event();
        return;
    }
    
    if (USBFS_SOF)
    {   
        USBFS_SOF = __FALSE;
        USBD_CDC_ACM_SOF_Event();
    }

    for (uint8 epNumber = 0u; epNumber < USBFS_MAX_EP; epNumber++)
    {
        if (USBFS_EP_INT_Pending[epNumber] > 0)
        {
            switch (epNumber)
            {
            case USBFS_EP0:
                USBD_ControlEPEvent();
                break;
            case USBFS_EP1:
                USBD_BULK_EP_BULK_Event(USBD_EVT_OUT);
                break;
            case USBFS_EP2:
                USBD_BULK_EP_BULK_Event(USBD_EVT_IN);
                break;
            case USBFS_EP3:
                /* in this direction traffic is not provided */
                break;
            case USBFS_EP4:
                USBD_CDC_ACM_EP_BULK_Event(USBD_EVT_OUT);
                break;
            case USBFS_EP5:
                USBD_CDC_ACM_EP_BULK_Event(USBD_EVT_IN);
                break;
            case USBFS_EP6:
                USBD_MSC_EP_BULK_Event(USBD_EVT_IN);
                break;
            case USBFS_EP7:
                USBD_MSC_EP_BULK_Event(USBD_EVT_OUT);
                break;
            }
        }
    }
}

void USBD_ClrStallEP(U32 EPNum)
{
    uint32 HwEP = FwEPToHwEP(EPNum);
    if (HwEP == EP_NOT_FOUND)
    {
        return;
    }
    else
    {
        /* Clear the endpoint Halt */
        USBFS_EP[HwEP].hwEpState &= (uint8) ~USBFS_ENDPOINT_STATUS_HALT;

        /* Clear the data toggle */
        USBFS_EP[HwEP].epToggle = 0u;

        /* Clear toggle bit for already armed packet */
        USBFS_SIE_EP_BASE.sieEp[HwEP].epCnt0 &=
                (uint8) ~(uint8) USBFS_EPX_CNT_DATA_TOGGLE;

        /* Return API State as it was defined before */
        USBFS_EP[HwEP].apiEpState &= (uint8) ~USBFS_NO_EVENT_ALLOWED;

        if ((USBFS_EP[HwEP].addr & USBFS_DIR_IN) != 0u)
        {
            /* IN Endpoint */
            if (USBFS_EP[HwEP].apiEpState == USBFS_IN_BUFFER_EMPTY)
            {
                /* Wait for next packet from application */
                USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_NAK_IN;
            }
            else /* Continue armed transfer */
            {
                USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_ACK_IN;
            }
        }
        else
        {
            /* OUT Endpoint */
            if (USBFS_EP[HwEP].apiEpState == USBFS_OUT_BUFFER_FULL)
            {
                /* Allow application to read full buffer */
                USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_NAK_OUT;
            }
            else /* Mark endpoint as empty, so it will be reloaded */
            {
                USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_ACK_OUT;
            }
        }
    }
}

void USBD_ConfigEP(USB_ENDPOINT_DESCRIPTOR *pEPD)
{
    uint32 HwEP = FwEPToHwEP(pEPD->bEndpointAddress);
    if (HwEP == EP_NOT_FOUND)
    {
        return;
    }
    else
    {
        USBFS_EP[HwEP].hwEpState  = 0u;
        USBFS_EP[HwEP].epToggle   = 0u;
        USBFS_EP[HwEP].interface  = 0u;
        USBFS_EP[HwEP].bufferSize = pEPD->wMaxPacketSize;
        USBFS_EP[HwEP].addr       = pEPD->bEndpointAddress;
        USBFS_EP[HwEP].attrib     = pEPD->bmAttributes;

        uint8 epType = pEPD->bmAttributes & USBFS_EP_TYPE_MASK;
        if (0u != (pEPD->bEndpointAddress & USBFS_DIR_IN))
        {
            /* IN Endpoint */
            USBFS_EP[HwEP].epMode     = USBFS_GET_ACTIVE_IN_EP_CR0_MODE(epType);
            USBFS_EP[HwEP].apiEpState = USBFS_EVENT_PENDING;
        }
        else
        {
            /* OUT Endpoint */
            USBFS_EP[HwEP].epMode     = USBFS_GET_ACTIVE_OUT_EP_CR0_MODE(epType);
            USBFS_EP[HwEP].apiEpState = USBFS_NO_EVENT_PENDING;
        }
        USBFS_EP[HwEP].buffOffset = buffCount;
        buffCount += USBFS_EP[HwEP].bufferSize;

        USBFS_ARB_EP_BASE.arbEp[HwEP].epCfg = USBFS_ARB_EPX_CFG_DEFAULT;
        if (USBFS_EP[HwEP].epMode != USBFS_MODE_DISABLE)
        {
            if (0u != (USBFS_EP[HwEP].addr & USBFS_DIR_IN))
            {
                USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_NAK_IN;
            }
            else
            {
                USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_NAK_OUT;
            }
        }
        else
        {
            USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_STALL_DATA_EP;
        }

        USBFS_ARB_EP_BASE.arbEp[HwEP].rwRa    = LO8(USBFS_EP[HwEP].buffOffset);
        USBFS_ARB_EP_BASE.arbEp[HwEP].rwRaMsb = HI8(USBFS_EP[HwEP].buffOffset);
        USBFS_ARB_EP_BASE.arbEp[HwEP].rwWa    = LO8(USBFS_EP[HwEP].buffOffset);
        USBFS_ARB_EP_BASE.arbEp[HwEP].rwWaMsb = HI8(USBFS_EP[HwEP].buffOffset);
        
        USBFS_SIE_EP_INT_EN_REG |= ((uint8)0x01u) << (HwEP - 1) ;
        
        if (0u == (USBFS_EP[HwEP].addr & USBFS_DIR_IN))
        {
            USBFS_EnableOutEP(HwEP);
        }
    }
}

void USBD_Connect(BOOL con)
{
    if (con)
    {

        if (0u == USBFS_initVar)
        {
            USBFS_Init();
            USBFS_initVar = 1u;
        }

        /* Start USBFS Component based on power settings in DWR (5V in this case) */
        USBFS_InitComponent(0, USBFS_DWR_VDDD_OPERATION);
        
        buffCount = 0u;
    }
    else
    {
        if ( USBFS_initVar )
        {
            USBFS_Stop();
          
            USBD_DeviceStatus = 0;
            USBD_DeviceAddress = 0;
            USBD_Configuration = 0;
            USBD_EndPointMask = 0x00010001;
            USBD_EndPointHalt = 0x00000000;
            USBD_EndPointStall = 0x00000000;
        }
    }
}

void USBD_DisableEP(U32 EPNum)
{
    if (EPNum & USBFS_DIR_IN)
    {
        /* only OUT endpoint can be disabled in this way */
        return;
    }
    uint32 HwEP = FwEPToHwEP(EPNum);
    if ((HwEP > USBFS_EP0) && (HwEP < USBFS_MAX_EP))
    {
        /* Set NAK response for OUT endpoint. */
        USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_MODE_NAK_OUT;
    }
}

void USBD_EnableEP(U32 EPNum)
{
    if (EPNum & USBFS_DIR_IN)
    {
        /* only OUT endpoint can be enabled in this way */
        return;
    }
    uint32 HwEP = FwEPToHwEP(EPNum);
    if ((HwEP > USBFS_EP0) && (HwEP < USBFS_MAX_EP))
    {
        USBFS_EP[HwEP].apiEpState = USBFS_NO_EVENT_PENDING;
        /* Enable OUT endpoint to be written by Host. */
        USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = USBFS_EP[HwEP].epMode;
    }
}

U32 USBD_ReadEP(U32 EPNum, U8 *pData, U32 cnt)
{
    uint32 res = 0;
    uint32 HwEP = FwEPToHwEP(EPNum);
    if (HwEP != EP_NOT_FOUND)
    {
        if ((HwEP == USBFS_EP0) || USBFS_GetEPAckState(HwEP))
        {
            ClearEPReq(HwEP);
            if ( HwEP == USBFS_EP0 )
            {
                uint8 ep0Count = (USBFS_EP0_CNT_REG & USBFS_EPX_CNT0_MASK) - USBFS_EPX_CNTX_CRC_COUNT;
                for ( ; res < ep0Count && res < cnt; res++ )
                {
                    pData[res] = USBFS_EP0_DR_BASE.epData[res];
                }
                if ( res == 0 )
                {
                    USBFS_ep0Mode = USBFS_MODE_ACK_IN_STATUS_OUT;
                }
                else
                {
                    USBFS_ep0Mode = USBFS_MODE_ACK_OUT_STATUS_IN;
                }
            }
            else
            {
                res = USBFS_ReadOutEP(HwEP, pData, cnt);
                /* Reenable EP */
                USBFS_EnableOutEP(HwEP);
            }
        }
        else
        {
            USBD_SignalHandler();
        }
    }
    return res;
}

void USBD_SetAddress(U32 adr, U32 setup)
{
    if (!setup)
    {
        /* Update device address if we got new address. */
        USBFS_CR0_REG = (uint8) adr | USBFS_CR0_ENABLE;
    }
}

void USBD_SetStallEP(U32 EPNum)
{
    uint32 HwEP = FwEPToHwEP(EPNum);
    if (HwEP == EP_NOT_FOUND)
    {
        return;
    }
    else
    {
        /* Set the endpoint Halt */
        USBFS_EP[HwEP].hwEpState |= (USBFS_ENDPOINT_STATUS_HALT);

        /* Clear the data toggle */
        USBFS_EP[HwEP].epToggle = 0u;
        USBFS_EP[HwEP].apiEpState |= USBFS_NO_EVENT_ALLOWED;

        if ((USBFS_EP[HwEP].addr & USBFS_DIR_IN) != 0u)
        {
            /* IN Endpoint */
            USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = (USBFS_MODE_STALL_DATA_EP
                    | USBFS_MODE_ACK_IN);
        }
        else
        {
            /* OUT Endpoint */
            USBFS_SIE_EP_BASE.sieEp[HwEP].epCr0 = (USBFS_MODE_STALL_DATA_EP
                    | USBFS_MODE_ACK_OUT);
        }
    }
}

U32 USBD_WriteEP(U32 EPNum, U8 *pData, U32 cnt)
{
    uint32 res = 0;
    uint32 HwEP = FwEPToHwEP(EPNum);
    if (HwEP != EP_NOT_FOUND)
    {
        if ( HwEP == USBFS_EP0 )
        {
            if ( cnt > USBFS_EP0_DR_MAPPED_REG_CNT )
            {
                cnt = USBFS_EP0_DR_MAPPED_REG_CNT;
            }
            for ( ; res < cnt; res++ )
            {
                USBFS_EP0_DR_BASE.epData[res] = pData[res];
            }
            
            /* Update the data toggle */
            USBFS_ep0Toggle ^= USBFS_EP0_CNT_DATA_TOGGLE;
            USBFS_ep0Mode = USBFS_MODE_ACK_IN_STATUS_OUT;
            USBFS_ep0Count = (uint8) res;
        }
        else
        {
            if (USBFS_GetEPState(HwEP) == USBFS_IN_BUFFER_EMPTY)
            {
                ClearEPReq(HwEP);
                USBFS_LoadInEP(HwEP, pData, cnt);
                res = cnt;
            }
            else
            {
                /* set EP to stay stalled */
                USBD_SetStallEP(HwEP);
                res = 0;
            }
        }
    }
    return res;
}
